--- a/client_hotels.html
+++ b/client_hotels.html
@@ -1,195 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Hotels</title>
-<link rel="stylesheet" href="css/structure.css">
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  .header {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 20px;
-    background-color: #fff;
-    border-bottom: 1px solid #ccc;
-  }
-  .logo {
-    font-weight: bold;
-  }
-  .logo a {
-    text-decoration: none;
-    color: #333;
-    font-size: 24px;
-  }
-
-  .nav-buttons {
-    display: flex;
-    gap: 10px;
-  }
-  .nav-buttons button {
-    padding: 8px 12px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    border-radius: 50px;
-    cursor: pointer;
-  }
-  .nav-buttons button:hover {
-    background-color: #f0f0f0; 
-  }
-
-  .auth-links {
-    display: flex;
-    gap: 10px;
-    margin-left: 20px;
-  }
-  .auth-links a {
-      padding: 8px 20px;
-      text-decoration: none;
-      color: white;
-      background-color: #007bff; 
-      border-radius: 50px; 
-      border: none;
-      display: inline-block;
-      transition: background-color 0.3s;
-    }
-
-    .auth-links a:hover {
-      background-color: #0056b3; 
-    }
-
-  .search-container {
-    display: flex;
-    justify-content: center;
-    margin: 20px;
-  }
-  .search-box {
-    width: 600px;
-    height: 40px;
-    padding: 8px;
-    border: 1px solid #888;
-    border-radius: 4px;
-  }
-  
-  .image-text-container {
-    display: flex;
-    align-items: center;
-    gap: 20px; 
-    margin-bottom: 20px; 
-  }
-
-  
-  .star-rating {
-    font-size: 20px; 
-    color: gold; 
-    margin-top: 8px; 
-  }
-
- 
-  .hotel-description {
-    max-width: 600px; 
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Hotels</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-gray-100 text-gray-800">
 
-<div class="header">
-  <div class="logo"><a href="client_home.html">VENUE~WISE</a></div>
-  <div class="nav-buttons">
-    <button onclick="location.href='client_nearyou.html'">Near you</button>
-    <button onclick="location.href='client_discover.html'">Discover</button>
-    <button onclick="location.href='client_review.html'">Review</button>
+  <!-- Header -->
+  <header class="bg-white shadow-md p-4 flex items-center justify-between relative">
+
+  <!-- Left: Logo -->
+  <a href="client_home.html" class="text-2xl font-bold text-orange-600">VENUE~WISE</a>
+
+  <!-- Center: Nav Buttons (Absolutely centered) -->
+  <div class="absolute left-1/2 transform -translate-x-1/2 flex gap-4">
+    <button onclick="location.href='client_nearyou.html'" class="px-4 py-2 bg-orange-100 text-orange-600 rounded-full hover:bg-orange-200">Near You</button>
+    <button onclick="location.href='client_discover.html'" class="px-4 py-2 bg-orange-100 text-orange-600 rounded-full hover:bg-orange-200">Discover</button>
+    <button onclick="location.href='client_review.html'" class="px-4 py-2 bg-orange-100 text-orange-600 rounded-full hover:bg-orange-200">Review</button>
   </div>
-  <div class="icons">
+
+  <!-- Right: Icons -->
+  <div class="flex items-center gap-4">
     <a href="notifications.html">
-    <img src="images/messages icon.png" alt="Messages Icon" style="width: 50px; height:100%; object-fit: cover;"/>
+      <img src="images/messages icon.png" alt="Notifications" class="w-8 h-8">
     </a>
     <a href="client_profile.html">
-    <img src="images/Venue_wise_1_-removebg-preview.png" alt="Profile Icon" style="width: 50px; height:100%; object-fit: cover;" />
+      <img src="images/Venue_wise_1_-removebg-preview.png" alt="Profile" class="w-8 h-8 rounded-full">
     </a>
   </div>
-</div>
 
-<div class="content">
-  <br><br>
-  <div class="section"></div>
-  <h3>Discover luxury hotels in Nairobi</h3>
-  
-  
-  <div class="hotel-list">
-    <div class="image-text-container">
-      <img src="images/Tribe.jpg" class="venue-image" width="300" alt="">
-      <div class="hotel-description">
-        <h4>The Tribe Hotel</h4>
-        <div class="star-rating">★★★★☆</div>
-        <div class="hotel-description">
-        <p>Located in: Village Market.
-            <br><br>
-            Address: Limuru Road, Nairobi
-            <br><br>
-            Phone number: 020 7200000
-            <br><br>
-            Have an event? <a href="client_bookingm.html">Click here to book</a>
-        </p>
-      </div>
-      </div>
-    </div>
-    <div class="image-text-container">
-      <img src="images/kempinski.jpg" class="venue-image" width="300" alt="">
-      <div class="hotel-description">
-        <h4>Villa Rosa Kempinski Hotel</h4>
-        <div class="star-rating">★★★★★</div>
-        <div class="hotel-description"></div>
-        <p>
-            Address: Chiromo Road, Nairobi
-            <br><br>
-            Phone number: 0703 049000
-            <br><br>
-            Have an event? <a href="client_bookingm.html">Click here to book</a>
-        </p>
-      </div>
-      </div>
-    </div>
-    <div class="image-text-container">
-      <img src="images/kwetu.jpg" class="venue-image" width="300" alt="">
-      <div class="hotel-description">
-        <h4>Kwetu Hotel</h4>
-        <div class="star-rating">★★★☆☆</div>
-        <div class="hotel-description">
-        <p>
-            Address: Peponi Road, Nairobi
-            <br><br>
-            Phone number: 0709 588000
-            <br><br>
-            Have an event? <a href="client_bookingm.html">Click here to book</a>
-            </div>
-        </p>
+</header>
+
+
+  <!-- Page Title -->
+  <div class="text-center mt-10 mb-6">
+    <h1 class="text-3xl font-bold">Luxury Hotels in Nairobi</h1>
+    <p class="text-gray-600 mt-2">Book the most elegant stays for your next event or getaway</p>
+  </div>
+
+  <!-- Hotel Cards -->
+  <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mb-16">
+
+    <!-- Hotel Card -->
+    <div class="bg-white rounded-xl shadow hover:shadow-lg transition">
+      <img src="images/Tribe.jpg" alt="The Tribe Hotel" class="rounded-t-xl h-48 w-full object-cover">
+      <div class="p-5">
+        <h2 class="text-xl font-semibold">The Tribe Hotel</h2>
+        <p class="text-sm text-gray-500">Limuru Road, Village Market, Nairobi</p>
+        <p class="text-sm text-gray-500">Phone: 020 7200000</p>
+        <div class="text-yellow-500 mt-2">★★★★☆</div>
+        <a href="client_bookingm.html?venue=The%20Tribe%20Hotel" class="inline-block mt-4 px-4 py-2 bg-orange-600 text-white rounded hover:bg-orange-700">Book Now</a>
       </div>
     </div>
 
-    <div class="image-text-container">
-      <img src="images/radisson blu.jpg" class="venue-image" width="300" alt="">
-      <div class="hotel-description">
-        <h4>Radisson Blu Hotel</h4>
-        <div class="star-rating">★★★★★</div>
-        <div class="hotel-description">
-        <p>
-            Address: Elgon Road, Nairobi
-            <br><br>
-            Phone number: 0709 810000
-            <br><br>
-            Have an event? <a href="booking.html">Click here to book</a>
-            </div>
-        </p>
+    <div class="bg-white rounded-xl shadow hover:shadow-lg transition">
+      <img src="images/kempinski.jpg" alt="Villa Rosa Kempinski" class="rounded-t-xl h-48 w-full object-cover">
+      <div class="p-5">
+        <h2 class="text-xl font-semibold">Villa Rosa Kempinski</h2>
+        <p class="text-sm text-gray-500">Chiromo Road, Nairobi</p>
+        <p class="text-sm text-gray-500">Phone: 0703 049000</p>
+        <div class="text-yellow-500 mt-2">★★★★★</div>
+        <a href="client_bookingm.html?venue=Villa%20Rosa%20Kempinski" class="inline-block mt-4 px-4 py-2 bg-orange-600 text-white rounded hover:bg-orange-700">Book Now</a>
+      </div>
+    </div>
+
+    <div class="bg-white rounded-xl shadow hover:shadow-lg transition">
+      <img src="images/kwetu.jpg" alt="Kwetu Hotel" class="rounded-t-xl h-48 w-full object-cover">
+      <div class="p-5">
+        <h2 class="text-xl font-semibold">Kwetu Hotel</h2>
+        <p class="text-sm text-gray-500">Peponi Road, Nairobi</p>
+        <p class="text-sm text-gray-500">Phone: 0709 588000</p>
+        <div class="text-yellow-500 mt-2">★★★☆☆</div>
+        <a href="client_bookingm.html?venue=Kwetu%20Hotel" class="inline-block mt-4 px-4 py-2 bg-orange-600 text-white rounded hover:bg-orange-700">Book Now</a>
+      </div>
+    </div>
+
+    <div class="bg-white rounded-xl shadow hover:shadow-lg transition">
+      <img src="images/radisson blu.jpg" alt="Radisson Blu" class="rounded-t-xl h-48 w-full object-cover">
+      <div class="p-5">
+        <h2 class="text-xl font-semibold">Radisson Blu Hotel</h2>
+        <p class="text-sm text-gray-500">Elgon Road, Nairobi</p>
+        <p class="text-sm text-gray-500">Phone: 0709 810000</p>
+        <div class="text-yellow-500 mt-2">★★★★★</div>
+        <a href="client_bookingm.html?venue=Radisson%20Blu%20Hotel" class="inline-block mt-4 px-4 py-2 bg-orange-600 text-white rounded hover:bg-orange-700">Book Now</a>
       </div>
     </div>
 
   </div>
-</div>
 
 </body>
 </html>
