--- a/client_review.html
+++ b/client_review.html
@@ -2,28 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Review</title>
   <style>
+    :root {
+      --orange: #ff7a00;
+      --light-orange: #ffe7d1;
+      --dark-orange: #e65c00;
+    }
+
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
+      background-color: #fdfdfd;
     }
 
     .header {
       display: flex;
       justify-content: space-between;
-      padding: 10px 20px;
-      background-color: #fff;
-      border-bottom: 1px solid #ccc;
+      align-items: center;
+      padding: 12px 24px;
+      background-color: white;
+      border-bottom: 1px solid #ddd;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
     }
 
     .logo a {
       font-weight: bold;
       text-decoration: none;
-      color: #333;
-      font-size: 24px;
+      color: var(--orange);
+      font-size: 26px;
     }
 
     .nav-buttons {
@@ -32,131 +41,159 @@
     }
 
     .nav-buttons button {
-      padding: 8px 12px;
-      border: 1px solid #ccc;
-      background-color: #fff;
-      border-radius: 50px;
+      padding: 8px 16px;
+      background-color: var(--light-orange);
+      color: var(--orange);
+      border: none;
+      border-radius: 30px;
       cursor: pointer;
+      font-weight: 500;
+      transition: background-color 0.3s ease;
     }
 
     .nav-buttons button:hover {
-      background-color: #f0f0f0;
-    }
-
-    .auth-links {
-      display: flex;
-      gap: 10px;
-      margin-left: 20px;
-    }
-
-    .auth-links a {
-      padding: 8px 20px;
-      text-decoration: none;
+      background-color: var(--orange);
       color: white;
-      background-color: #007bff;
-      border-radius: 50px;
-      border: none;
-      display: inline-block;
-      transition: background-color 0.3s;
     }
 
-    .auth-links a:hover {
-      background-color: #0056b3;
+    .icons img {
+      width: 40px;
+      height: 40px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-left: 10px;
     }
 
     .container {
-      width: 400px;
-      margin: 50px auto;
+      max-width: 500px;
+      margin: 40px auto;
+      padding: 30px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+
+    h2 {
+      text-align: center;
+      color: var(--orange);
+      margin-bottom: 20px;
+    }
+
+    select, textarea {
+      width: 100%;
+      padding: 10px;
       border: 1px solid #ccc;
-      padding: 20px;
-      background-color: #fff;
-      box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-    }
-
-    .star {
-      font-size: 2em;
-      cursor: pointer;
-      color: #ccc;
-    }
-
-    .star.selected {
-      color: #ffd700;
+      border-radius: 6px;
+      font-size: 15px;
+      margin-top: 5px;
+      margin-bottom: 20px;
     }
 
     .rating-label {
-      margin-top: 30px;
+      margin-top: 10px;
+      font-weight: 500;
     }
 
-    .review-write-label {
-      margin-top: 20px;
+    .star-rating {
+      display: flex;
+      justify-content: center;
+      margin: 10px 0;
     }
 
-    .submit-button {
-      margin-top: 20px;
+    .star {
+      font-size: 2rem;
+      cursor: pointer;
+      color: #ccc;
+      transition: color 0.2s;
+    }
+
+    .star.selected {
+      color: #FFD700;
+    }
+
+    .submit-button button {
+      background-color: var(--orange);
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 15px;
+      font-weight: bold;
+    }
+
+    .submit-button button:hover {
+      background-color: var(--dark-orange);
     }
 
     .review-item {
-      border-bottom: 1px solid #ccc;
-      padding: 10px 0;
+      padding: 12px 0;
+      border-bottom: 1px solid #eee;
     }
 
     .review-item .stars {
       color: #FFD700;
     }
+
+    .review-item p {
+      margin-top: 4px;
+    }
+
+    h3 {
+      margin-top: 40px;
+      color: #333;
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 6px;
+    }
   </style>
 </head>
 <body>
   <div class="header">
-  <div class="logo"><a href="client_home.html">VENUE~WISE</a></div>
-  <div class="nav-buttons">
-    <button onclick="location.href='client_nearyou.html'">Near you</button>
-    <button onclick="location.href='client_discover.html'">Discover</button>
-    <button onclick="location.href='client_review.html'">Review</button>
+    <div class="logo"><a href="client_home.html">VENUE~WISE</a></div>
+    <div class="nav-buttons">
+      <button onclick="location.href='client_nearyou.html'">Near You</button>
+      <button onclick="location.href='client_discover.html'">Discover</button>
+      <button onclick="location.href='client_review.html'">Review</button>
+    </div>
+    <div class="icons">
+      <a href="notifications.html">
+        <img src="images/messages icon.png" alt="Messages Icon" />
+      </a>
+      <a href="client_profile.html">
+        <img src="images/Venue_wise_1_-removebg-preview.png" alt="Profile Icon" />
+      </a>
+    </div>
   </div>
-  <div class="icons">
-    <a href="notifications.html">
-    <img src="images/messages icon.png" alt="Messages Icon" style="width: 50px; height:100%; object-fit: cover;"/>
-    </a>
-    <a href="client_profile.html">
-    <img src="images/Venue_wise_1_-removebg-preview.png" alt="Profile Icon" style="width: 50px; height:100%; object-fit: cover;" />
-    </a>
-  </div>
-</div>
 
   <div class="container">
-    <form id="ReviewForm" method="post" style="margin: 20px;">
-      <div style="display: flex; flex-direction: column; align-items: center;">
-        <h2 style="font-size: 24px; margin-bottom: 20px;">Write a Review</h2>
+    <form id="ReviewForm" method="post">
+      <h2>Write a Review</h2>
 
-        <label for="venue" style="font-size: 16px; margin-bottom: 10px;">Venue Name:</label>
-        <input type="text" id="venue" name="venue" placeholder="Enter venue name" style="width: 350px; height: 30px; font-size: 14px;" required />
-        <br><br>
+      <label for="venue">Select Venue:</label>
+      <select id="venue" name="venue" required>
+        <option value="">-- Choose a venue --</option>
+      </select>
 
-        <div class="rating-label"><label for="rating">Rating:</label></div>
-        <div class="star-rating" style="display: flex; gap: 5px; margin-top: 5px;">
-          <span class="star" data-value="1">&#9733;</span>
-          <span class="star" data-value="2">&#9733;</span>
-          <span class="star" data-value="3">&#9733;</span>
-          <span class="star" data-value="4">&#9733;</span>
-          <span class="star" data-value="5">&#9733;</span>
-        </div>
+      <div class="rating-label"><label for="rating">Rating:</label></div>
+      <div class="star-rating">
+        <span class="star" data-value="1">&#9733;</span>
+        <span class="star" data-value="2">&#9733;</span>
+        <span class="star" data-value="3">&#9733;</span>
+        <span class="star" data-value="4">&#9733;</span>
+        <span class="star" data-value="5">&#9733;</span>
+      </div>
+      <input type="hidden" id="rating" name="rating" value="0" required />
 
-        <input type="hidden" id="rating" name="rating" value="0" required />
-        <br><br>
+      <label for="review">Review:</label>
+      <textarea id="review" name="review" placeholder="Write your review..." required></textarea>
 
-        <div class="review-write-label"><label for="review">Write your review here...</label></div>
-        <textarea id="review" name="review" placeholder="Write your review here..." style="width: 350px; height: 100px; font-size: 14px;" required></textarea>
-        <br><br>
-
-        <div class="submit-button">
-          <button type="submit" style="width: 100px; height: 30px; font-size: 14px;">Submit</button>
-        </div>
+      <div class="submit-button">
+        <button type="submit">Submit</button>
       </div>
     </form>
 
-    <hr style="margin-top: 40px;">
     <h3>Reviews</h3>
-    <div id="review-list" style="margin-top: 20px;"></div>
+    <div id="review-list"></div>
   </div>
 
   <script>
@@ -175,23 +212,38 @@
 
       function highlightStars(rating) {
         stars.forEach(star => {
-          if (parseInt(star.dataset.value) <= rating) {
-            star.classList.add('selected');
-          } else {
-            star.classList.remove('selected');
-          }
+          star.classList.toggle('selected', parseInt(star.dataset.value) <= rating);
         });
       }
 
-      document.getElementById('venue').addEventListener('blur', (e) => {
-        const venueName = e.target.value.trim();
+      async function loadVenues() {
+        try {
+          const res = await fetch('http://localhost:5000/api/venues');
+          const venues = await res.json();
+          const dropdown = document.getElementById('venue');
+          venues.forEach(v => {
+            const option = document.createElement('option');
+            option.value = v.name;
+            option.textContent = v.name;
+            dropdown.appendChild(option);
+          });
+        } catch (err) {
+          alert('⚠️ Failed to load venues.');
+          console.error(err);
+        }
+      }
+
+      loadVenues();
+
+      document.getElementById('venue').addEventListener('change', (e) => {
+        const venueName = e.target.value;
         if (venueName) fetchReviews(venueName);
       });
 
       document.getElementById('ReviewForm').addEventListener('submit', async (e) => {
         e.preventDefault();
 
-        const venueName = document.getElementById('venue').value.trim();
+        const venueName = document.getElementById('venue').value;
         const rating = document.getElementById('rating').value;
         const comment = document.getElementById('review').value.trim();
         const token = localStorage.getItem('token');
@@ -214,10 +266,10 @@
           const data = await res.json();
 
           if (res.ok) {
-            alert('✅ Review submitted successfully!');
+            alert('✅ Review submitted!');
             document.getElementById('ReviewForm').reset();
             highlightStars(0);
-            fetchReviews(venueName); // Refresh reviews
+            fetchReviews(venueName);
           } else {
             alert('❌ Error: ' + (data.message || 'Failed to submit review.'));
           }
