--- a/login.html
+++ b/login.html
@@ -140,6 +140,7 @@
         if (res.ok) {
           localStorage.setItem('token', data.token);
           localStorage.setItem('user', JSON.stringify(data.user));
+          localStorage.setItem('clientId', data.user.id); 
 
           const role = data.user.role;
 
