--- a/notifications.html
+++ b/notifications.html
@@ -1,214 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Notifications</title>
-<link rel="stylesheet" href="css/structure.css">
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Notifications</title>
+  <style>
+    :root {
+      --orange: #ff7a00;
+      --light-orange: #ffe7d1;
+      --dark-orange: #e65c00;
+    }
 
-  .header {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 20px;
-    background-color: #fff;
-    border-bottom: 1px solid #ccc;
-  }
-  .logo {
-    font-weight: bold;
-  }
-  .logo a {
-    text-decoration: none;
-    color: #333;
-    font-size: 24px;
-  }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #fdfdfd;
+    }
 
-  .nav-buttons {
-    display: flex;
-    gap: 10px;
-  }
-  .nav-buttons button {
-    padding: 8px 12px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    border-radius: 50px;
-    cursor: pointer;
-  }
-  .nav-buttons button:hover {
-    background-color: #f0f0f0; 
-  }
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 24px;
+      background-color: white;
+      border-bottom: 1px solid #ddd;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+    }
 
-  .auth-links {
-    display: flex;
-    gap: 10px;
-    margin-left: 20px;
-  }
-  .auth-links a {
-      padding: 8px 20px;
+    .logo a {
+      font-weight: bold;
       text-decoration: none;
-      color: white;
-      background-color: #007bff; 
-      border-radius: 50px; 
+      color: var(--orange);
+      font-size: 26px;
+    }
+
+    .nav-buttons {
+      display: flex;
+      gap: 10px;
+    }
+
+    .nav-buttons button {
+      padding: 8px 16px;
+      background-color: var(--light-orange);
+      color: var(--orange);
       border: none;
-      display: inline-block;
-      transition: background-color 0.3s;
+      border-radius: 30px;
+      cursor: pointer;
+      font-weight: 500;
+      transition: background-color 0.3s ease;
     }
 
-    .auth-links a:hover {
-      background-color: #0056b3; 
+    .nav-buttons button:hover {
+      background-color: var(--orange);
+      color: white;
     }
 
-  .search-container {
-    display: flex;
-    justify-content: center;
-    margin: 20px;
-  }
-  .search-box {
-    width: 600px;
-    height: 40px;
-    padding: 8px;
-    border: 1px solid #888;
-    border-radius: 4px;
-  }
+    .icons img {
+      width: 40px;
+      height: 40px;
+      object-fit: cover;
+      border-radius: 50%;
+    }
 
-  .categories {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-  }
-  .categories button {
-    padding: 8px 12px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    color: #000;
-    border-radius: 50px;
-    cursor: pointer;
-  }
-  .categories button:hover{
-    background-color: #f0f0f0;
-  }
+    .content {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
 
-  .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+    .section {
+      margin-bottom: 30px;
+    }
 
-  .banner {
-    margin: 20px auto;
-    width: 600px;
-    height: 150px;
-    border: 1px solid #888;
-    position: relative;
-  }
+    .section h3 {
+      color: #000;
+      margin-bottom: 10px;
+      font-size: 20px;
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 6px;
+    }
 
-  .section {
-    width: 90%;
-    max-width: 650px;
-    margin: 20px 0;
-  }
-  .section h3 {
-    margin-bottom: 10px;
-    text-align: left;
-  }
-
-  .carousel-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    max-width: 650px; 
-    margin: auto;
-  }
-
-  .arrow-left,
-  .arrow-right {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(255,255,255,0.8);
-    border: none;
-    font-size: 24px;
-    padding: 10px;
-    cursor: pointer;
-    border-radius: 50%;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-
-  .arrow-left {
-    left: 10px;
-  }
-  .arrow-right {
-    right: 10px;
-  }
-
-  .venue-list {
-    display: flex;
-    overflow-x: auto;
-    gap: 10px;
-    padding: 10px 0;
-    width: 100%;
-    scrollbar-width: none;
-  }
-  
-  .venue-list::-webkit-scrollbar {
-    display: none;
-  }
-
-  .venue-image {
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    display: block;
-  }
-  .icons {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-</style>
+    .section p {
+      font-size: 16px;
+      color: #333;
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
 
-<div class="header">
-  <div class="logo"><a href="home.html">VENUE~WISE</a></div>
-  <div class="nav-buttons">
-    <button onclick="location.href='near_you.html'">Near you</button>
-    <button onclick="location.href='discover.html'">Discover</button>
-    <button onclick="location.href='review.html'">Review</button>
+  <div class="header">
+    <div class="logo"><a href="client_home.html">VENUE~WISE</a></div>
+    <div class="nav-buttons">
+      <button onclick="location.href='client_nearyou.html'">Near You</button>
+      <button onclick="location.href='client_discover.html'">Discover</button>
+      <button onclick="location.href='client_review.html'">Review</button>
+    </div>
+    <div class="icons">
+      <a href="notifications.html">
+        <img src="images/messages icon.png" alt="Messages Icon" />
+      </a>
+      <a href="client_profile.html">
+        <img src="images/Venue_wise_1_-removebg-preview.png" alt="Profile Icon" />
+      </a>
+    </div>
   </div>
-  <div class="icons">
-    <a href="notifications.html">
-    <img src="images/messages icon.png" alt="Messages Icon" style="width: 50px; height:100%; object-fit: cover;"/>
-    </a>
-    <a href="client_home.html">
-    <img src="images/Venue_wise_1_-removebg-preview.png" alt="Profile Icon" style="width: 50px; height:100%; object-fit: cover;"/>
-    </a>
-  </div>
-</div>
 
-<div class="content">
+  <div class="content">
     <div class="section">
-        <h3>Notifications</h3>
-        <p>You have no new notifications.</p>
+      <h3>Notifications</h3>
+      <p>You have no new notifications.</p>
     </div>
-    
+
     <div class="section">
-        <h3>Recent Activities</h3>
-        <p>No recent activities to display.</p>
+      <h3>Recent Activities</h3>
+      <p>No recent activities to display.</p>
     </div>
-    
+
     <div class="section">
-        <h3>Messages</h3>
-        <p>No new messages.</p>
+      <h3>Messages</h3>
+      <p>No new messages.</p>
     </div>
-</div>
+  </div>
 
 </body>
 </html>
